syntax = "proto3";

package kvrows;

option go_package = "kvrows";

import "dfuse/codecs/deos/deos.proto";
import "google/protobuf/timestamp.proto";

message ImplicitTrxRow {
  // Primary key to include: transaction_id and block_id
  dfuse.codecs.deos.SignedTransaction signed_trx = 1;
  string name = 2;
}

message TrxRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.deos.SignedTransaction signed_trx = 1;
  dfuse.codecs.deos.TransactionReceipt receipt = 2;
  dfuse.codecs.deos.PublicKeys public_keys = 3;
}

message TrxTraceRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.deos.TransactionTrace trx_trace = 1;
  dfuse.codecs.deos.BlockHeader block_header = 2;
}

message DtrxRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.deos.SignedTransaction signed_trx = 1;
  dfuse.codecs.deos.ExtDTrxOp created_by = 2;
  dfuse.codecs.deos.ExtDTrxOp canceled_by = 3;
}

message BlockRow {
  // Key will be block_id

  // We want another index also:
  //    blockTime:blockID = \01

  dfuse.codecs.deos.Block block = 1;
  dfuse.codecs.deos.TransactionRefs implicit_trx_refs = 2;
  dfuse.codecs.deos.TransactionRefs trx_refs = 3;
  dfuse.codecs.deos.TransactionRefs trace_refs = 4;
}

message AccountRow {
  // Key will be account:block_id    // block_id, block_num and account implicit in key
  string name = 1;
  string creator = 2;
  string block_id = 3;
  string trx_id = 4;
  google.protobuf.Timestamp block_time = 5;
}